# keyboard-configurator

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  RELEASING.md  a.py  build.bat  build.rs  flake.nix  keyboard-layout.sh  layouts.py
.cargo/: config
.github/workflows/: ci.yml  version.py
backend/: Cargo.toml  build.rs
backend/examples/: benchmark.rs  daemon.rs  usb.rs
backend/src/: backend.rs  board.rs  color.rs  deref_cell.rs  dummy.rs  key.rs  keycode.rs  keymap.rs  layer.rs  lib.rs  matrix.rs  mode.rs  nelson.rs  rect.rs  s76power.rs
backend/src/benchmark/: block_dev.rs  mod.rs  usb_dev.rs  usb_hub.rs
backend/src/daemon/: access_hidraw.rs  daemon_thread.rs  device_enumerator.rs  dummy.rs  fwupdmgr.rs  mod.rs  root_helper.rs  s76power.rs  server.rs
backend/src/layout/: meta.rs  mod.rs  physical_layout.rs
daemon/: Cargo.toml
daemon/src/: board.rs  client.rs  color.rs  key.rs  lib.rs  mode.rs  server.rs
data/: com.system76.keyboard-configurator.gresource.xml  com.system76.keyboardconfigurator.gresource.xml  com.system76.keyboardconfigurator.gschema.xml  system76_launch_1_default.hex  system76_launch_2_default.hex  system76_launch_heavy_1_default.hex  system76_launch_lite_1_default.hex
debian/: changelog  com.system76.pkexec.keyboardconfigurator.policy  control  copyright  libpop-keyboard-backlight.install  libsystem76-keyboard-configurator.install  rules  system76-keyboard-configurator.install  test-launch-system76-keyboard-configurator.install  test-launch-system76-keyboard-configurator.postinst
debian/source/: options
examples/: daemon.rs  keyboard_color.rs  keyboard_layout.rs  launch_hid.rs
ffi/: Cargo.toml  build.rs  pop_keyboard_backlight.h  system76_keyboard_configurator.h  system76_keyboard_configurator.pc.in
ffi/src/: lib.rs
i18n/cs/: system76_keyboard_configurator.ftl  system76_keyboard_configurator_backend.ftl  system76_keyboard_configurator_widgets.ftl
i18n/da/: system76_keyboard_configurator.ftl  system76_keyboard_configurator_backend.ftl  system76_keyboard_configurator_widgets.ftl
i18n/de/: system76_keyboard_configurator.ftl  system76_keyboard_configurator_backend.ftl  system76_keyboard_configurator_widgets.ftl
i18n/en/: system76_keyboard_configurator.ftl  system76_keyboard_configurator_backend.ftl  system76_keyboard_configurator_iced.ftl  system76_keyboard_configurator_widgets.ftl
i18n/es/: not important  system76_keyboard_configurator.ftl  system76_keyboard_configurator_backend.ftl  system76_keyboard_configurator_widgets.ftl
i18n/fi/: system76_keyboard_configurator.ftl  system76_keyboard_configurator_backend.ftl  system76_keyboard_configurator_widgets.ftl
i18n/fr/: system76_keyboard_configurator.ftl  system76_keyboard_configurator_backend.ftl  system76_keyboard_configurator_widgets.ftl
i18n/hu/: system76_keyboard_configurator.ftl  system76_keyboard_configurator_backend.ftl  system76_keyboard_configurator_widgets.ftl
i18n/it/: system76_keyboard_configurator.ftl  system76_keyboard_configurator_backend.ftl  system76_keyboard_configurator_widgets.ftl
i18n/ko/: system76_keyboard_configurator.ftl  system76_keyboard_configurator_backend.ftl  system76_keyboard_configurator_widgets.ftl
i18n/nl/: system76_keyboard_configurator.ftl  system76_keyboard_configurator_backend.ftl  system76_keyboard_configurator_widgets.ftl
i18n/pl/: system76_keyboard_configurator.ftl  system76_keyboard_configurator_backend.ftl  system76_keyboard_configurator_widgets.ftl
i18n/pt-BR/: system76_keyboard_configurator.ftl  system76_keyboard_configurator_backend.ftl  system76_keyboard_configurator_widgets.ftl
i18n/ru/: system76_keyboard_configurator.ftl  system76_keyboard_configurator_backend.ftl  system76_keyboard_configurator_widgets.ftl
i18n/sl/: system76_keyboard_configurator.ftl  system76_keyboard_configurator_backend.ftl  system76_keyboard_configurator_widgets.ftl
i18n/tr/: system76_keyboard_configurator.ftl  system76_keyboard_configurator_backend.ftl  system76_keyboard_configurator_widgets.ftl
iced/: Cargo.toml  i18n.toml
iced/src/: fixed_widget.rs  main.rs  page.rs  picker_json.rs  widget_restyle.rs
iced/src/view/: key.rs  keyboard.rs  mod.rs
layouts/: README.md  linux_keymap.json  picker.csv  picker.json
layouts/ansi-104/: physical.json
layouts/keymap/: ec.json
layouts/keysym/: README.md  base.json  en_us.json
linux/: build.py  com.system76.KeyboardConfigurator.appdata.xml  com.system76.KeyboardConfigurator.desktop  com.system76.keyboardconfigurator.appdata.xml  com.system76.keyboardconfigurator.desktop  com.system76.keyboardconfiguratorlaunchtest.desktop  keyboard-configurator.desktop  linuxdeploy-plugin-gtk.sh  package.sh
macos/: Info.plist  Info.plist.in  README.md  appdmg.json  build.py  deploy.py  install_name_tool.py  keyboard-configurator.bundle  launcher.sh  package.sh  signing.sh
packaging/: build.bat  build.sh
packaging/linux/: build.py  com.system76.keyboardconfigurator.appdata.xml  com.system76.keyboardconfigurator.desktop  linuxdeploy-plugin-gtk.sh
packaging/macos/: Info.plist.in  appdmg.json  build.py
packaging/windows/: README.md  build.py  keyboard-configurator.wxs
src/: about_dialog.rs  backlight.rs  choose_color.rs  cli.rs  color.rs  color_circle.rs  color_wheel.rs  config.rs  configurator_app.rs  deref_cell.rs  error_dialog.rs  keyboard.rs  keyboard_backlight_widget.rs  keyboard_color.rs  keyboard_color_button.rs  keyboard_color_button.ui  keyboard_layer.rs  keymap.rs  lib.rs  main.rs  main_window.rs  page.rs  selected_keys.rs  shortcuts_window.rs  shortcuts_window.ui  style.css  testing.rs
src/application/: about_dialog.rs  backlight.rs  configurator_app.rs  error_dialog.rs  gresource.rs  key.rs  keyboard.rs  keyboard.ui  (+9 more)
tools/: Cargo.toml
widgets/: Cargo.toml
widgets/examples/: keyboard_color.rs
widgets/src/: choose_color.rs  color_circle.rs  color_wheel.rs  keyboard_backlight_widget.rs  keyboard_color.rs  lib.rs  selected_keys.rs
windows/: README.md  build.bat  build.py  keyboard-configurator.wxs  libraries-wxi-gen.py  setup-keyboard-configurator.wxs  wix.bat
(+192 files in other folders)
