[package]
name = "system76-keyboard-configurator"
version = "0.2.11"
authors = ["Ian Douglas Scott <idscott@system76.com>", "Jeremy Soller <jeremy@system76.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

[workspace]
members = [ "tools", "ffi", "backend", "widgets" ]

[dependencies]
cascade = "1"
cairo-rs = { git = "https://github.com/pop-os/gtk-rs" }
futures = "0.3.13"
gdk = { git = "https://github.com/pop-os/gtk-rs" }
gio = { git = "https://github.com/pop-os/gtk-rs" }
glib = { git = "https://github.com/pop-os/gtk-rs" }
gtk = { git = "https://github.com/pop-os/gtk-rs", features = ["v3_22"] }
libc = "0.2"
once_cell = "1.4"
pango = { git = "https://github.com/pop-os/gtk-rs" }
pangocairo = { git = "https://github.com/pop-os/gtk-rs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.0"
env_logger = "0.8.3"
backend = { package = "system76-keyboard-configurator-backend", path = "backend" }
widgets = { package = "system76-keyboard-configurator-widgets", path = "widgets" }

# Translation support
i18n-embed = { version = "0.12.0", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.5.0"
rust-embed = { version = "5.9.0", features = ["debug-embed"] }

[build-dependencies]
gio = { git = "https://github.com/pop-os/gtk-rs" }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.8"

[features]
appimage = ["backend/appimage"]
