[package]
name = "system76-keyboard-configurator"
version = "1.2.0"
authors = ["Ian Douglas Scott <idscott@system76.com>", "Jeremy Soller <jeremy@system76.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

[workspace]
members = [ "tools", "ffi", "backend", "widgets" ]

[dependencies]
cascade = "1"
futures = "0.3.13"
# 3.24 is packaged by focal
gtk = { version = "0.15.0", features = ["v3_24"] }
libc = "0.2"
once_cell = "1.4"
pangocairo = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.0"
env_logger = "0.8.3"
backend = { package = "system76-keyboard-configurator-backend", path = "backend" }
widgets = { package = "system76-keyboard-configurator-widgets", path = "widgets" }

# Translation support
i18n-embed = { version = "0.12.0", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.5.0"
rust-embed = { version = "5.9.0", features = ["debug-embed"] }

[build-dependencies]
gio = "0.15.0"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.8"

[features]
appimage = ["backend/appimage"]
