[package]
name = "system76-keyboard-configurator"
version = "1.3.12"
authors = ["Ian Douglas Scott <idscott@system76.com>", "Jeremy Soller <jeremy@system76.com>"]
license = "GPL-3.0-or-later"
edition = "2021"
rust-version = "1.64"

[workspace]
members = [ "tools", "ffi", "backend", "widgets" ]

[dependencies]
cascade = "1"
futures = "0.3.13"
gtk = { version = "0.18.0" }
libc = "0.2"
once_cell = "1.4"
pangocairo = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.0"
env_logger = "0.10"
backend = { package = "system76-keyboard-configurator-backend", path = "backend" }
widgets = { package = "system76-keyboard-configurator-widgets", path = "widgets" }

# Translation support
i18n-embed = { version = "0.13.0", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6.0"
rust-embed = { version = "6.2.0", features = ["debug-embed"] }

[build-dependencies]
glib-build-tools = "0.18.0"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.8"

[features]
appimage = ["backend/appimage"]

[profile.release]
lto = true
