[package]
name = "system76-keyboard-configurator-backend"
version = "0.1.0"
authors = ["Ian Douglas Scott <idscott@system76.com>", "Jeremy Soller <jeremy@system76.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
futures = "0.3.13"
futures-timer = "3.0.2"
gio = { git = "https://github.com/pop-os/gtk-rs" }
glib = { git = "https://github.com/pop-os/gtk-rs" }
hidapi = { version = "1.2", default-features = false, features = ["linux-static-hidraw"] }
once_cell = "1.4"
ordered-float = { version = "2.0", features = ["serde"] }
palette = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.0"
uuid = { version = "0.8.2", features = ["v4"] }

[dependencies.system76_ectool]
version = "0.3.6"
features = ["hidapi", "std"]

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "1.9.1"

[features]
appimage = []
