[package]
name = "system76-keyboard-configurator-backend"
version = "0.1.0"
authors = ["Ian Douglas Scott <idscott@system76.com>", "Jeremy Soller <jeremy@system76.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
bitflags = "1.3.2"
cascade = "1"
futures = "0.3.13"
futures-timer = "3.0.2"
glib = "0.15.0"
hidapi = { version = "1.2", default-features = false, features = ["linux-shared-hidraw"] }
libc = "0.2"
once_cell = "1.4"
ordered-float = { version = "2.0", features = ["serde"] }
palette = "0.5"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.0"
uuid = { version = "0.8.2", features = ["v4"] }
i18n-embed = { version = "0.12.0", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.5.0"
rust-embed = { version = "5.9.0", features = ["debug-embed"] }

[dependencies.system76_ectool]
version = "0.3.8"
features = ["hidapi", "std"]

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "1.9.1"

[build-dependencies]
serde_json = "1.0"

[dev-dependencies]
libc = "0.2"

[features]
appimage = []
