[package]
name = "system76-keyboard-configurator-backend"
version = "0.1.0"
authors = ["Ian Douglas Scott <idscott@system76.com>", "Jeremy Soller <jeremy@system76.com>"]
license = "GPL-3.0-or-later"
edition = "2021"

[dependencies]
async-process = "1.7.0"
cascade = "1"
futures = { version = "0.3.13", features = ["thread-pool"] }
futures-timer = "3.0.2"
glib = { version = "0.17.0", optional = true }
hidapi = { version = "1.2", default-features = false, features = ["linux-shared-hidraw"] }
libc = "0.2"
once_cell = "1.4"
ordered-float = { version = "3.0", features = ["serde"] }
palette = "0.5"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.0"
uuid = { version = "1", features = ["v4"] }
i18n-embed = { version = "0.13.0", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6.0"
rust-embed = { version = "6.2.0", features = ["debug-embed"] }

[dependencies.system76_ectool]
version = "0.3.8"
features = ["hidapi", "std"]

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "3"

[build-dependencies]
serde_json = "1.0"

[dev-dependencies]
libc = "0.2"

[features]
appimage = []
