[package]
name = "ffi"
version = "0.1.0"
authors = ["Ian Douglas Scott <idscott@system76.com>"]
edition = "2018"

[lib]
name = "system76_keyboard_configurator"
crate-type = [ "cdylib" ]

[dependencies]
glib = { git = "https://github.com/pop-os/gtk-rs" }
gtk-sys = { git = "https://github.com/pop-os/gtk-rs" }
gtk = { git = "https://github.com/pop-os/gtk-rs" }
system76-keyboard-configurator-widgets = { path = "../widgets" }
