[package]
name = "ffi"
version = "0.1.0"
authors = ["Ian Douglas Scott <idscott@system76.com>"]
edition = "2018"

[lib]
name = "system76_keyboard_configurator"
crate-type = [ "cdylib" ]

[dependencies]
glib = "0.14.0"
gtk-sys = "0.14.0"
gtk = "0.14.0"
system76-keyboard-configurator-widgets = { path = "../widgets" }
