[package]
name = "system76-keyboard-configurator-iced"
version = "0.1.0"
edition = "2021"

[dependencies]
backend = { package = "system76-keyboard-configurator-backend", path = "../backend" }
delegate = "0.9.0"
futures = "0.3.28"
libcosmic = { git = "https://github.com/pop-os/libcosmic", branch = "button-theme" }
once_cell = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = {version = "1", features = ["sync"] }

# Translation support
i18n-embed = { version = "0.12.0", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.5.0"
rust-embed = { version = "5.9.0", features = ["debug-embed"] }


