[package]
name = "system76-keyboard-configurator-widgets"
version = "0.1.0"
authors = ["Ian Douglas Scott <idscott@system76.com>", "Jeremy Soller <jeremy@system76.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
cascade = "1"
futures = "0.3.13"
gtk = { version = "0.15.0", features = ["v3_22"] }
libc = "0.2"
once_cell = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.0"
backend = { package = "system76-keyboard-configurator-backend", path = "../backend" }

# Translation support
i18n-embed = { version = "0.12.0", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.5.0"
rust-embed = { version = "5.9.0", features = ["debug-embed"] }

[build-dependencies]
gio = "0.15.0"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.8"

[features]
appimage = ["backend/appimage"]
