[package]
name = "system76-keyboard-configurator-widgets"
version = "0.1.0"
authors = ["Ian Douglas Scott <idscott@system76.com>", "Jeremy Soller <jeremy@system76.com>"]
license = "GPL-3.0-or-later"
edition = "2021"

[dependencies]
cascade = "1"
futures = "0.3.13"
gtk = { version = "0.18.0" }
libc = "0.2"
once_cell = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.0"
backend = { package = "system76-keyboard-configurator-backend", features = ["glib"], path = "../backend" }

# Translation support
i18n-embed = { version = "0.13.0", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6.0"
rust-embed = { version = "6.2.0", features = ["debug-embed"] }

[build-dependencies]
gio = "0.18.0"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.8"

[features]
appimage = ["backend/appimage"]
